fix issue with overlap

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,7 +5,6 @@
   align-items: center;
   margin: 0px auto;
   width: 80%;
-  height: 100vh;
 }
 
 .image-carousel {
@@ -25,8 +24,6 @@
   border-radius: 8px;
 }
 
-/* .canvas {
-  width: 100%;
-  height: 100%;
-  margin: 0px auto;
-} */
+.canvas {
+  margin-top: 20px;
+}
